# cpp_primer

./: .gitignore  Readme.md  cpp_primer.md
Account/: CMakeLists.txt
Account/src/: main.cpp
Sales_data_converting_construct/: CMakeLists.txt
Sales_data_converting_construct/src/: main.cpp
Sales_data_converting_construct_explicit/src/: Sales_data.h  main.cpp
Sales_data_default_construct/src/: Sales_data.cpp  main.cpp
Sales_data_delegrat/: CMakeLists.txt
Sales_data_delegrat/src/: Sales_data.cpp  main.cpp
Screen/: CMakeLists.txt
Screen/src/: Screen.cpp  Screen.h  main.cpp
Screen_const/src/: Screen.cpp  Screen.h  main.cpp
Screen_mutable/: CMakeLists.txt  main.cpp
Window_mng/src/: Screen.h  Window_mng.h  main.cpp
Window_mng_addScreen/src/: Window_mng.cpp  Window_mng.h
chapter10/: generic_algrothm.md
chapter10/bind_first_use/: CMakeLists.txt
chapter10/bind_first_use/src/: main.cpp
chapter10/bind_for_each_print/: CMakeLists.txt
chapter10/bind_for_each_print/src/: main.cpp  textDecode.cpp  textDecode.h
chapter10/generic_accumulate/: CMakeLists.txt
chapter10/generic_accumulate/src/: main.cpp
chapter10/generic_back_inserter/: CMakeLists.txt
chapter10/generic_back_inserter/src/: main.cpp
chapter10/generic_copy-replace-replace_copy/: CMakeLists.txt
chapter10/generic_copy-replace-replace_copy/src/: main.cpp
chapter10/generic_count/: CMakeLists.txt
chapter10/generic_count/src/: main.cpp
chapter10/generic_equal/: CMakeLists.txt
chapter10/generic_equal/src/: main.cpp
chapter10/generic_fill-fill_n/: CMakeLists.txt
chapter10/generic_find/: CMakeLists.txt
chapter10/generic_sort_stable-sort_predict/: CMakeLists.txt
chapter10/generic_sort_unique/: CMakeLists.txt
chapter10/iterator_inserter/: CMakeLists.txt
chapter10/iterator_iostream/: CMakeLists.txt
chapter10/iterator_istream/: CMakeLists.txt
chapter10/iterator_reverse/: CMakeLists.txt
chapter10/lambda/: CMakeLists.txt
chapter10/lambda_implicity_cap/: CMakeLists.txt
chapter10/lambda_implicity_cap/src/: cap_mux.cpp  reference.cpp  textDecode.cpp  textDecode.h  value.cpp
chapter10/lambda_reference_cap/: CMakeLists.txt
chapter10/lambda_stable-sort_sort/: CMakeLists.txt
chapter10/lambda_value_cap/: CMakeLists.txt
chapter10/specific_container_alg/: CMakeLists.txt
chapter10/specific_container_alg/src/: gen_odd_even.cpp  lst_merge.cpp  lst_splice.cpp
chapter11/: Associative_Container.md
chapter11/associateveContainerOper/: CMakeLists.txt
chapter11/associateveContainerOper/src/: map_find_instead_index.cpp  map_insert.cpp  map_insert_rtn.cpp  map_iterator.cpp  multimap_search.cpp  set_access_element.cpp  set_insert.cpp  set_iterator.cpp  traversal_map.cpp  word_rule.txt  word_transfer.cpp
chapter11/multiset_compare/: CMakeLists.txt  Makefile
chapter11/multiset_compare/src/: Sales_data.cpp  Sales_data.h  bookstore.txt  main.cpp
chapter11/pair/: Makefile
chapter11/unorder_set/: CMakeLists.txt
chapter11/unordered_map/: CMakeLists.txt
chapter11/using_map_set/: CMakeLists.txt
chapter11/using_map_set/src/: use_map.cpp  use_set.cpp  words.txt
chapter12/: Alloctor_memory.md
chapter12/alloc_array/: CMakeLists.txt
chapter12/alloc_array/src/: allocator.cpp  new_array.cpp
chapter12/shared_ptr/: CMakeLists.txt
chapter12/shared_ptr/src/: new_delete.cpp  new_shared_ptr_vector.cpp  number.txt  shared_ptr.cpp  strblob.cpp  strblob.h  strblob_impl.cpp
chapter12/text_query/: CMakeLists.txt
chapter12/weak_ptr/: CMakeLists.txt
chapter13/: Control_Copy.md
chapter13/HasPtr/: CMakeLists.txt
chapter13/HasPtr/src/: hasPtr_val.cpp
chapter13/Msg_Folder-move/: CMakeLists.txt
chapter13/Msg_Folder-move/src/: folder.h  message.cpp  message.h
chapter13/StrVec/: CMakeLists.txt
chapter13/Swap/: CMakeLists.txt
chapter13/copy_assign_Sales_data/: CMakeLists.txt
chapter13/copy_assign_Sales_data/src/: Nocopy.cpp  Sales_data.cpp  Sales_data.h  main.cpp
chapter13/images/: memory_allocate_policy.drawio
chapter14/: OverloadOperator_class_type_conversion.md  OverloadOperator_conversion.md
chapter14/Class_type_conversion/: CMakeLists.txt
chapter14/PrintString/: CMakeLists.txt
chapter14/StrBlobPtr/: CMakeLists.txt
chapter14/StrBlobPtr/src/: blob_input.cpp  main.cpp  strblob.cpp  strblob.h  strblobptr.cpp  strblobptr.h
chapter14/std_func_object/: CMakeLists.txt
chapter14/std_func_object/src/: map_std_function.cpp  std_func_obj.cpp  tmp_func_obj.cpp
chapter15/: Object-orinted_program.md
chapter15/Basket/: CMakeLists.txt
chapter15/Quate/: CMakeLists.txt
chapter15/Quate/src/: Disc_quate.cpp  bulkquate_derived_disc.cpp  bulkquate_quate_dft_para.cpp  quate.cpp  quate_virtual.cpp  quate_virtual_de.cpp
chapter16/: template_and_generic_programming.md
chapter16/Blob/: CMakeLists.txt
chapter16/StrVec/: CMakeLists.txt
chapter16/Varidical_template/: CMakeLists.txt
chapter17/: Speicialized_library_facility.md
chapter17/IO/: CMakeLists.txt  copy.out
chapter17/IO/src/: file_io.cpp  main.cpp
chapter17/bitset/: CMakeLists.txt
chapter17/random/: CMakeLists.txt
chapter17/regex/: CMakeLists.txt
chapter17/tuple/: CMakeLists.txt
chapter17/tuple/src/: base_main.cpp
chapter18/: Tools_for_Large_Programs.md
chapter18/sales_data_exception/: CMakeLists.txt
chapter6/: function.md
chapter6/decltype/: main.cpp
chapter6/overload_namespace/: CMakeLists.txt
chapter6/virtual_method/: main.cpp
chapter7/: class.md  function.md
chapter7/Sales_data/: CMakeLists.txt
chapter7/Sales_data_converting_construct_explicit/: CMakeLists.txt
chapter7/Sales_data_default_construct/: CMakeLists.txt
chapter7/Sales_data_friend/: CMakeLists.txt
chapter7/Screen_const/: CMakeLists.txt
chapter7/Screen_mutable/: Screen.h
chapter7/Window_mng/: CMakeLists.txt
chapter7/Window_mng_addScreen/: CMakeLists.txt
chapter8_9/fstream/: CMakeLists.txt
chapter8_9/sequecia_container_assign/: CMakeLists.txt
chapter8_9/string_construct/: CMakeLists.txt
clang_toolchain_cmake/: toolchain.cmake
left_value_reference/: CMakeLists.txt  main.cpp
(+84 files in other folders)
